[gd_scene load_steps=3 format=3 uid="uid://bfrgsk75sagyp"]

[ext_resource type="Script" path="res://Level_Manager.gd" id="1_buvmh"]

[sub_resource type="Curve2D" id="Curve2D_4mphf"]

[node name="LevelManager" type="Node2D" groups=["LevelManagerGroup"]]
script = ExtResource("1_buvmh")

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_4mphf")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]

[node name="EnemyTimer" type="Timer" parent="."]

[connection signal="ready" from="EnemyTimer" to="." method="_on_enemy_timer_ready"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
